Remove outdated Leaflet SRI

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>QuestLog</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-sA+eKkTDUYdPFcQ8wO96A+5txn1zWQguL05yyOgZRro=" crossorigin=""/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
 <style>
 body { margin: 0; font-family: sans-serif; }
 #content { height: calc(100vh - 50px); overflow-y: auto; }
@@ -46,7 +46,7 @@ nav button { flex: 1; border: none; background: #f4f4f4; }
 <button id="journalTab">Journal</button>
 <button id="mapTab">Map</button>
 </nav>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-oA8U0qaRepBw5D8zl0stnP5/1dLUHUeD4/5x9It3r3I=" crossorigin=""></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
 <script>
 const journalEl = document.getElementById('journal');
 const mapEl = document.getElementById('mapView');
